--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Install dependecies
+        run: npm install
+
+      - name: Build project
+        run: npm run build
+
       - name: Deploy to S3
         uses: jakejarvis/s3-sync-action@master
         with:
